--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,27 @@
 	<classpathentry kind="lib" path="/Users/nctl144/Desktop/project2CSC312/lib/tomcat-coyote.jar"/>
 	<classpathentry kind="lib" path="/Users/nctl144/Desktop/project2CSC312/lib/tomcat-dbcp.jar"/>
 	<classpathentry kind="lib" path="/Users/nctl144/Desktop/project2CSC312/lib/tomcat-juli-7.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="lib/catalina.jar"/>
+	<classpathentry kind="lib" path="lib/ecj-4.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/el-api.jar"/>
+	<classpathentry kind="lib" path="lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="lib/jasper.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-juli-7.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat7-websocket.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
